--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p {
 }
 
 
-.thegrid {
+.card-grid {
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
@@ -61,7 +61,7 @@ p {
 }
 
 
-.card {
+.the-card {
   background-color: var(--gunmetal);
   margin: 0 2.5rem;
   border-radius: .625rem;
@@ -69,7 +69,7 @@ p {
 }
 
 
-.wrapemoji {
+.wrap-emoji {
   width: 2rem;
   height: 2rem;
   background-color: var(--light-cream);
@@ -80,46 +80,46 @@ p {
 }
 
 
-.wrapemoji span {
+.wrap-emoji span {
   font-size: 0.8rem;
 }
 
 
-.handemoji {
+.hand-emoji {
   background-color: var(--light-cream);
 }
 
 
-.netemoji {
+.net-emoji {
   background-color: var(--alice-blue);
 }
 
 
-.chatemoji {
+.chat-emoji {
   background-color: var(--soft-pink);
 }
 
 
-.inflex {
+.card-content {
   margin: 1.25rem;
   font-family: "Outfit", sans-serif;
 }
 
 
-.inflex h2 {
+.card-content h2 {
   color: var(--light-gray);
   font-size: 1rem;
   margin-top: 1.2rem;
 }
 
 
-.inflex p {
+.card-content p {
   font-weight: 400;
   font-size: 0.9rem;
 }
 
 
-.theimages {
+.card-image {
   width: 100%;
   margin-top: 1.25rem;
   border-radius: 0.8rem;
