--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
   background-image: url('resources/Background_image.svg');
   background-size: cover;
   background-repeat: no-repeat;
+  
+  margin: 0 auto;
 }
 
 
@@ -46,7 +48,7 @@ header h1 {
 
 
 p {
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: var(--ash-gray);
   margin-top: 0.8125rem;
   font-weight: none;
@@ -58,13 +60,13 @@ p {
   grid-template-columns: 1fr;
   gap: 2rem;
   margin: 2rem 0;
+  padding: 0 1.8rem;
 }
 
 
 .the-card {
   background-color: var(--gunmetal);
-  margin: 0 2.5rem;
-  border-radius: .625rem;
+  border-radius: .75rem;
   overflow: hidden;
 }
 
@@ -122,4 +124,31 @@ p {
   width: 100%;
   margin-top: 1.25rem;
   border-radius: 0.8rem;
+}
+
+
+@media (min-width: 50em) {
+
+  header h1 {
+    font-size: 2.5rem;
+  }
+  
+  
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(280px, 1fr));
+  gap: 3rem;
+  margin: 2rem auto;
+}
+
+
+
+.card-grid > :last-child {
+  grid-column: 1 / -1;
+  max-width: 46%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 }
