--- a/style.css
+++ b/style.css
@@ -128,19 +128,22 @@ p {
 
 
 @media (min-width: 50em) {
+header h1 {
+  font-size: 2.5rem;
+}
 
-  header h1 {
-    font-size: 2.5rem;
-  }
-  
-  
+
+header p {
+  font-size: 1.1rem;
+}
+
+
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(2, minmax(280px, 1fr));
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
   gap: 3rem;
   margin: 2rem auto;
 }
-
 
 
 .card-grid > :last-child {
@@ -149,6 +152,39 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+}
 
 
+@media (min-width: 64em){
+body {
+  max-width: 75em;
+  background-size: cover;
+  background-position: center;
+  justify-content: center;
+}
+
+
+header h1 {
+  font-size: 3rem;
+}
+  
+  
+header p {
+  font-size: 1.5rem;
+}
+  
+  
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(300px, 1fr));
+  gap: 3rem;
+  padding: 0 3rem;
+}
+
+
+.card-grid > :last-child {
+  grid-column: auto;
+  max-width: none;
+  margin: 0;
+}
 }
