--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ header p {
   display: grid;
   grid-template-columns: repeat(3, minmax(300px, 1fr));
   gap: 3rem;
-  padding: 0 3rem;
+  padding: 1rem 6rem;
 }
 
 
