--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body {
 
 
 header {
+  display: flex;
+  flex-direction: column;
   font-family: "Outfit", sans-serif;
   margin: 1.75rem 1.3rem 0 1.3rem;
   text-align: center;
@@ -161,8 +163,6 @@ header p {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 3rem;
-  
-  /* align-items: stretch; */
 }
 
 
@@ -198,18 +198,18 @@ body {
 
 header h1 {
   font-size: 2.5rem;
+  width: 25rem;
+  align-self: center;
 }
 
 
 header p {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 
 .card-grid {
   flex-wrap: nowrap;
-  
-  /* align-items: stretch; */
 }
 
 
